[package]
name = "x3dh_e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1.5"

[workspace]

[[bench]]
name = "x3dh_e2e_bench"
path = "src/benchmark.rs"
harness = false
